--- a/MVCApp/Views/Home/Index.cshtml
+++ b/MVCApp/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
-﻿@{
+﻿@using  MVCApp.HtmlHelper;
+
+@{
     
     ViewData["Title"] = "Home Page";
+    // 準備 HTML 屬性
+    
 }
 
 
@@ -9,16 +13,11 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     @await Component.InvokeAsync("My",new Employee {DepartmentId = 123,Name = "Charles"})
-    <form enctype="multipart/form-data" method="post">
-        <dl>
-            <dt>
-                <label asp-for="FileUpload.FormFile"></label>
-            </dt>
-            <dd>
-                <input asp-for="FileUpload.FormFile" type="file" />
-                <span asp-validation-for="FileUpload.FormFile"></span>
-            </dd>
-        </dl>
-        <input asp-page-handler="Upload" class="btn" type="submit" value="Upload" />
+    <form  asp-action="HandleForm" asp-controller="Home"  method="post">
+        <input type="submit" name="action" value="Save" />
+        <input type="submit" name="action" value="Cancel" />
     </form>
+
+
+
 </div>
